60% completed, sales and bill page completed

--- a/src/templates/billing.html
+++ b/src/templates/billing.html
@@ -28,7 +28,7 @@
                 <td> {{list[1].itemTotalPrice.data }}</td>
             </tr>
             {%endfor%}
-            <tr> <td></td><td></td><td></td><td></td><td>Total</td><td>{{total[0]}}</td></tr>
+            <tr> <td></td><td></td><td></td><td></td><td>Total</td><td>{{totalPriceAndQuantity[0]}}</td></tr>
         </tbody>
     </table>
 </form>
