--- a/src/templates/saleDetail.html
+++ b/src/templates/saleDetail.html
@@ -1,5 +1,5 @@
 <a href="{{ url_for('sales', error='success') }}">Back</a>
-<h3> Bill ID - {{bill.billId}} | Total - {{bill.billAmount}} | Customer Name - {{bill.customerName}} </h3>
+<h3> Bill ID - {{bill.billId}} | Total - {{bill.billAmount}} | Customer Name - {{bill.billCustomerName}} </h3>
 <table>
     <thead>
         {% for col in saleDetailHead %}
