--- a/src/templates/sales.html
+++ b/src/templates/sales.html
@@ -4,8 +4,9 @@
     <b>Branch Area</b>{{ salesForm.branchArea }}
     <b>Branch Type</b>{{ salesForm.branchOutletOrNot }}
     <b>Branch Name</b>{{ salesForm.branchUnitName }}
-    <br>
     <b>User Name</b>{{ salesForm.userSearch }}
+    <br>
+    <b>Item Name</b>{{ salesForm.itemNameSearch }}
     <b>Customer Name</b>{{ salesForm.customerSearch(placeholder='Customer Name')}}
     <b>From Date</b>{{ salesForm.fromDate(placeholder='From Date yyyy-mm-dd')}}
     <b>Till Date</b>{{ salesForm.tillDate(placeholder='Till Date yyyy-mm-dd')}}
