--- a/src/templates/signup.html
+++ b/src/templates/signup.html
@@ -1,13 +1,14 @@
 {% include "include_this.html" %}
     <form action="" method="POST">
         <h2 >Update User</h2>
-        {{ signupform.username(placeholder="User Name")}}
+        {{ signupform.username(placeholder="User Name", id='username')}}
         {{ signupform.password(placeholder="Password") }}
         {{ signupform.userAccess(id='userAccess', onchange="makeVisible()") }}
         {{ signupform.branchArea(id='branchArea', onchange="getBranchUnitNames()")}}
         {{ signupform.branchOutletOrNot(id='branchOutletOrNot', onchange="getBranchUnitNames()")}}
         {{ signupform.branchUnitName(placeholder="Branch Unit Name", id='branchUnitName') }}
         {{ signupform.submit}}
+        {{ signupform.modify(id='modify', onclick='modifyUser()')}}
     </form>
     <h6> {{ error }}</h6>
 
@@ -20,24 +21,33 @@
   </thead>
   <tbody>
   {% for rows in userLog %}
-  <tr>
-      {%for col in rows %}
-          {%if col == 'B' %}
-              <td> Shop </td>
-          {%elif col == 'N' %}
-              <td> Storage </td>
-          {%elif col == 'M' or col == 'O'%}
-              <td> {{col}} </td>
-              {%break%}
-          {% else %}
-              <td> {{col}} </td>
+      <tr>
+          <td><a href="{{ url_for('signup', error=rows[0]) }}">{{rows[0]}}</a></td>
+          <td> {{rows[1][0]}} </td>
+          <td> {{rows[1][1]}} </td>
+          {%if rows[1][1] == 'O' %}
+            <td>All</td>
+            <td>All</td>
+            <td>All</td>
+          {%elif rows[1][1] == 'M' %}
+            <td>{{rows[1][2]}}</td>
+            <td>All</td>
+            <td>All</td>
+          {%else%}
+            <td> {{rows[1][2]}} </td>
+            {%if rows[1][3] == 'B' %}
+                <td>Shop</td>
+            {%else%}
+                <td>Storage</td>
+            {%endif%}
+            <td> {{rows[1][4]}} </td>
           {%endif%}
-      {%endfor%}
-  </tr>
+      </tr>
   {%endfor%}
-</tbody>
+  </tbody>
 </table>
 
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 <script>
     window.onload = function() {
       makeVisible();
@@ -62,16 +72,22 @@
       let z = document.getElementById("branchUnitName");
       branchArea = x.value;
       branchOutletOrNot = y.value;
+      z.innerHTML = "";
       fetch('/branchUnitName/'+ branchArea + '/' + branchOutletOrNot).then(function(response){
          response.json().then(function(data){
-             let optionHtml = '';
              for(let branchUnitName of data.branchUnitNames) {
-                 optionHtml += '<option value"' + branchUnitName.id + '">' + branchUnitName.name + '</option>';
+                 var opt = document.createElement('option');
+                 opt.innerHTML = branchUnitName.id;
+                 opt.value = branchUnitName.name;
+                 z.appendChild(opt);
              }
-             z.innerHTML = optionHtml;
          });
       });
   }
-
+  function modifyUser(){
+      $.ajax('/modifyUser/'+ document.getElementById('username').value + '/' + document.getElementById('userAccess').value
+      + '/' + document.getElementById('branchArea').value + '/' + document.getElementById('branchOutletOrNot').value + '/'
+        + document.getElementById('branchUnitName').value).done(alert('success'));
+  }
 
 </script>
